# pretty-sha2

./: Cargo.toml  readme.md
src/: sha512.rs
tests/: tests.rs
