[package]
name = "pretty-sha2"
version = "0.1.0"
description = "A wrapper for sha2 library to get hash string with [0-9] & [a-z] & [A-Z] alphabet"
repository = "https://github.com/pashokitsme/pretty-sha2"
license-file = "LICENSE"
edition = "2021"

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
fastrand = "1.8.0"
sha2 = "0.10.6"
