[package]
name = "pretty-sha2"
authors = ["pashokitsme <pashamail79@gmail.com>"]
version = "0.1.1"
edition = "2021"
description = "A wrapper for sha2 library to get hash string with [0-9] & [a-z] & [A-Z] alphabet"
repository = "https://github.com/pashokitsme/pretty-sha2"
license = "MPL-2.0"
include = [
  "readme.md",
  "LICENSE"
]

[profile.release]
strip = true
lto = true
opt-level = "s"
panic = "abort"

[dependencies]
fastrand = "1.8.0"
sha2 = "0.10.6"
